[package]
name        = "uuid-extra"
version     = "0.0.2"
description = "Minimalist UUID extra utilities for base encoding UUIDs (base64 and base58)"
edition     = "2024"
license     = "MIT OR Apache-2.0"
homepage    = "https://github.com/jeremychone/rust-uuid-extra"
repository  = "https://github.com/jeremychone/rust-uuid-extra"

[lints.rust]
unsafe_code = "forbid"
# unused      = { level = "allow", priority = -1 } # For exploratory dev.

[lib]
doctest = false

[dependencies]
# -- UUID
uuid = { version = "1", features = ["v4", "v7"] }
# -- BaseX
base64 = "0.22.1"
bs58 = "0.5.1"
# -- Others
derive_more = {version = "2", features = ["from", "display"] }

